added filters to the pending and approved signups table

--- a/frontend/src/assets/i18n/en.json
+++ b/frontend/src/assets/i18n/en.json
@@ -54,6 +54,16 @@
     "approved": "Approved",
     "noPending": "No pending signups",
     "noApproved": "No approved signups",
+    "filters": {
+      "name": "Name",
+      "namePlaceholder": "Search by name",
+      "phone": "Phone",
+      "phonePlaceholder": "Search by phone",
+      "promoCode": "Promo code",
+      "promoCodePlaceholder": "Search by promo code",
+      "search": "Search",
+      "reset": "Reset"
+    },
     "table": {
       "id": "ID",
       "username": "Username",
