added the first name and last name fields for registration,also added the username on the pending approval  notification

--- a/frontend/src/assets/i18n/en.json
+++ b/frontend/src/assets/i18n/en.json
@@ -14,9 +14,13 @@
   "register": {
     "title": "Create Account",
     "subtitle": "Sign up to get started",
-    "username": "Username",
-    "usernamePlaceholder": "Enter username",
-    "usernameRequired": "Username is required",
+    "firstName": "First Name",
+    "firstNamePlaceholder": "Enter your first name",
+    "firstNameRequired": "First name is required",
+    "lastName": "Last Name",
+    "lastNamePlaceholder": "Enter your last name",
+    "lastNameRequired": "Last name is required",
+    "yourUsername": "Your username:",
     "phone": "Phone",
     "phonePlaceholder": "Enter phone number",
     "phoneRequired": "Phone is required",
