--- a/frontend/src/assets/i18n/fr.json
+++ b/frontend/src/assets/i18n/fr.json
@@ -14,9 +14,13 @@
   "register": {
     "title": "Créer un compte",
     "subtitle": "Inscrivez-vous pour commencer",
-    "username": "Nom d'utilisateur",
-    "usernamePlaceholder": "Entrez le nom d'utilisateur",
-    "usernameRequired": "Le nom d'utilisateur est requis",
+    "firstName": "Prénom",
+    "firstNamePlaceholder": "Entrez votre prénom",
+    "firstNameRequired": "Le prénom est requis",
+    "lastName": "Nom",
+    "lastNamePlaceholder": "Entrez votre nom",
+    "lastNameRequired": "Le nom est requis",
+    "yourUsername": "Votre nom d'utilisateur :",
     "phone": "Téléphone",
     "phonePlaceholder": "Entrez le numéro de téléphone",
     "phoneRequired": "Le téléphone est requis",
