fixed issue with dashboard header,added a hint for password criteria and added stronger password validator

--- a/frontend/src/assets/i18n/en.json
+++ b/frontend/src/assets/i18n/en.json
@@ -25,9 +25,10 @@
     "phonePlaceholder": "Enter phone number",
     "phoneRequired": "Phone is required",
     "password": "Password",
-    "passwordPlaceholder": "Enter password",
+    "passwordPlaceholder": "e.g. Abc123",
     "passwordRequired": "Password is required",
-    "passwordMinLength": "Password must be at least 6 characters",
+    "passwordHint": "Min 6 characters: 1 uppercase, 1 lowercase, 1 digit",
+    "passwordWeak": "Password must have at least 6 characters, 1 uppercase, 1 lowercase, and 1 digit",
     "confirmPassword": "Confirm Password",
     "confirmPasswordPlaceholder": "Confirm your password",
     "confirmPasswordRequired": "Please confirm your password",
