--- a/frontend/src/assets/i18n/fr.json
+++ b/frontend/src/assets/i18n/fr.json
@@ -25,9 +25,10 @@
     "phonePlaceholder": "Entrez le numéro de téléphone",
     "phoneRequired": "Le téléphone est requis",
     "password": "Mot de passe",
-    "passwordPlaceholder": "Entrez le mot de passe",
+    "passwordPlaceholder": "ex: Abc123",
     "passwordRequired": "Le mot de passe est requis",
-    "passwordMinLength": "Le mot de passe doit contenir au moins 6 caractères",
+    "passwordHint": "Min 6 caractères : 1 majuscule, 1 minuscule, 1 chiffre",
+    "passwordWeak": "Le mot de passe doit contenir au moins 6 caractères, 1 majuscule, 1 minuscule et 1 chiffre",
     "confirmPassword": "Confirmer le mot de passe",
     "confirmPasswordPlaceholder": "Confirmez votre mot de passe",
     "confirmPasswordRequired": "Veuillez confirmer votre mot de passe",
