added validator to all fields to prevent user from entering special characters

--- a/frontend/src/assets/i18n/en.json
+++ b/frontend/src/assets/i18n/en.json
@@ -24,6 +24,7 @@
     "phone": "Phone",
     "phonePlaceholder": "Enter phone number",
     "phoneRequired": "Phone is required",
+    "phoneNumbersOnly": "Phone number must contain only digits",
     "password": "Password",
     "passwordPlaceholder": "e.g. Abc123",
     "passwordRequired": "Password is required",
@@ -33,6 +34,7 @@
     "confirmPasswordPlaceholder": "Confirm your password",
     "confirmPasswordRequired": "Please confirm your password",
     "passwordMismatch": "Passwords do not match",
+    "noSpecialChars": "Characters like é, è, à, ä, ü, ç, ñ are not permitted.",
     "submitButton": "Register",
     "submitting": "Registering...",
     "successMessage": "Registration successful! Your signup is pending approval.",
