--- a/frontend/src/assets/i18n/fr.json
+++ b/frontend/src/assets/i18n/fr.json
@@ -24,6 +24,7 @@
     "phone": "Téléphone",
     "phonePlaceholder": "Entrez le numéro de téléphone",
     "phoneRequired": "Le téléphone est requis",
+    "phoneNumbersOnly": "Le numéro de téléphone doit contenir uniquement des chiffres",
     "password": "Mot de passe",
     "passwordPlaceholder": "ex: Abc123",
     "passwordRequired": "Le mot de passe est requis",
@@ -33,6 +34,7 @@
     "confirmPasswordPlaceholder": "Confirmez votre mot de passe",
     "confirmPasswordRequired": "Veuillez confirmer votre mot de passe",
     "passwordMismatch": "Les mots de passe ne correspondent pas",
+    "noSpecialChars": "Les caractères comme é, è, à, ä, ü, ç, ñ ne sont pas permis.",
     "submitButton": "S'inscrire",
     "submitting": "Inscription en cours...",
     "successMessage": "Inscription réussie ! Votre demande est en attente d'approbation.",
