updated the transaction table with the new columns added to the transactions table,updated filed necessary for file import and also translation

--- a/frontend/src/assets/i18n/en.json
+++ b/frontend/src/assets/i18n/en.json
@@ -204,28 +204,35 @@
     "importTitle": "Import Transactions",
     "selectAgent": "Select Agent",
     "selectAgentPlaceholder": "Choose an agent...",
-    "transactionDate": "Transaction Date",
-    "pdfFile": "PDF File",
+    "excelFile": "Excel File",
     "importing": "Importing...",
-    "importButton": "Import PDF",
+    "importButton": "Import Excel",
     "importSuccess": "Successfully imported {{count}} transactions",
-    "invalidFileType": "Only PDF files are allowed",
-    "selectFile": "Please select a PDF file",
-    "selectDate": "Please select a transaction date",
+    "invalidFileType": "Only Excel files (.xlsx, .xls) are allowed",
+    "selectFile": "Please select an Excel file",
     "filtersTitle": "Filters",
     "startDate": "Start Date",
     "endDate": "End Date",
     "agent": "Agent",
     "allAgents": "All Agents",
+    "channel": "Channel",
+    "allChannels": "All Channels",
+    "booking": "Booking Type",
+    "allBookings": "All Booking Types",
+    "username": "Username",
+    "searchUsername": "Search username...",
     "resetFilters": "Reset Filters",
     "totalTransactions": "Total Transactions",
     "totalAmount": "Total Amount",
     "table": {
-      "bettorName": "Bettor Name",
+      "datetime": "Date/Time",
+      "channel": "Channel",
+      "username": "Username",
+      "booking": "Booking Type",
       "amount": "Amount",
+      "balance": "Balance",
       "promoCode": "Promo Code",
-      "agentName": "Agent Name",
-      "transactionDate": "Transaction Date"
+      "agentName": "Agent Name"
     }
   }
 }
