--- a/frontend/src/assets/i18n/fr.json
+++ b/frontend/src/assets/i18n/fr.json
@@ -201,28 +201,35 @@
     "importTitle": "Importer des Transactions",
     "selectAgent": "Sélectionner un Agent",
     "selectAgentPlaceholder": "Choisir un agent...",
-    "transactionDate": "Date de Transaction",
-    "pdfFile": "Fichier PDF",
+    "excelFile": "Fichier Excel",
     "importing": "Importation...",
-    "importButton": "Importer le PDF",
+    "importButton": "Importer Excel",
     "importSuccess": "{{count}} transactions importées avec succès",
-    "invalidFileType": "Seuls les fichiers PDF sont autorisés",
-    "selectFile": "Veuillez sélectionner un fichier PDF",
-    "selectDate": "Veuillez sélectionner une date de transaction",
+    "invalidFileType": "Seuls les fichiers Excel (.xlsx, .xls) sont autorisés",
+    "selectFile": "Veuillez sélectionner un fichier Excel",
     "filtersTitle": "Filtres",
     "startDate": "Date de début",
     "endDate": "Date de fin",
     "agent": "Agent",
     "allAgents": "Tous les Agents",
+    "channel": "Canal",
+    "allChannels": "Tous les Canaux",
+    "booking": "Type de Réservation",
+    "allBookings": "Tous les Types",
+    "username": "Nom d'utilisateur",
+    "searchUsername": "Rechercher un utilisateur...",
     "resetFilters": "Réinitialiser",
     "totalTransactions": "Total Transactions",
     "totalAmount": "Montant Total",
     "table": {
-      "bettorName": "Nom du Parieur",
+      "datetime": "Date/Heure",
+      "channel": "Canal",
+      "username": "Nom d'utilisateur",
+      "booking": "Type de Réservation",
       "amount": "Montant",
+      "balance": "Solde",
       "promoCode": "Code Promo",
-      "agentName": "Nom de l'Agent",
-      "transactionDate": "Date de Transaction"
+      "agentName": "Nom de l'Agent"
     }
   }
 }
