added a general transaction filter for deposits and updated booking translation

--- a/frontend/src/assets/i18n/fr.json
+++ b/frontend/src/assets/i18n/fr.json
@@ -214,7 +214,7 @@
     "allAgents": "Tous les Agents",
     "channel": "Canal",
     "allChannels": "Tous les Canaux",
-    "booking": "Type de Réservation",
+    "booking": "Type de Transaction",
     "allBookings": "Tous les Types",
     "username": "Nom d'utilisateur",
     "searchUsername": "Rechercher un utilisateur...",
