updated translation of the app to include transactions summary of agents

--- a/frontend/src/assets/i18n/en.json
+++ b/frontend/src/assets/i18n/en.json
@@ -232,7 +232,10 @@
       "amount": "Amount",
       "balance": "Balance",
       "promoCode": "Promo Code",
-      "agentName": "Agent Name"
+      "agentName": "Agent Name",
+      "lessThan500Deposits":"Transactions of less than 500",
+      "between500And1000Deposits":"Transactions between 500 and 1000",
+      "moreThan1000Deposits":"Transactions of more than 1000"
     }
   }
 }
